--- a/series/index.html
+++ b/series/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Tags | My New Hugo </title>
+<title>Series | My New Hugo </title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://tbakie.github.io/deneme/tags/">
+<link rel="canonical" href="https://tbakie.github.io/deneme/series/">
 <link crossorigin="anonymous" href="/deneme/assets/css/stylesheet.5cfc680b1eeaeef9efbced92d46c2a9e876b72ee14fba85846afc4cff9e6e6f8.css" integrity="sha256-XPxoCx7q7vnvvO2S1Gwqnodrcu4U&#43;6hYRq/Ez/nm5vg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://tbakie.github.io/deneme/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://tbakie.github.io/deneme/favicon-16x16.png">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://tbakie.github.io/deneme/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://tbakie.github.io/deneme/tags/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://tbakie.github.io/deneme/series/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,13 +55,13 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Tags" />
+</noscript><meta property="og:title" content="Series" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://tbakie.github.io/deneme/tags/" />
+<meta property="og:url" content="https://tbakie.github.io/deneme/series/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Tags"/>
+<meta name="twitter:title" content="Series"/>
 <meta name="twitter:description" content=""/>
 
 </head>
@@ -118,7 +118,7 @@
             </li>
             <li>
                 <a href="https://tbakie.github.io/deneme/tags/" title="Tags">
-                    <span class="active">Tags</span>
+                    <span>Tags</span>
                 </a>
             </li>
             <li>
@@ -148,34 +148,10 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Tags</h1>
+    <h1>Series</h1>
 </header>
 
 <ul class="terms-tags">
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/blog/">Blog <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/css/">CSS <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/html/">HTML <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/hugo/">Hugo <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/markdown/">Markdown <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/papermod/">PaperMod <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/portfolio/">Portfolio <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
-    <li>
-        <a href="https://tbakie.github.io/deneme/tags/website/">Website <sup><strong><sup>1</sup></strong></sup> </a>
-    </li>
 </ul>
     </main>
     
