--- a/series/index.html
+++ b/series/index.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Series | My New Hugo </title>
+<title>Series | TBE Website </title>
 <meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
+<meta name="author" content="Theme PaperMod">
 <link rel="canonical" href="https://tbakie.github.io/deneme/series/">
 <link crossorigin="anonymous" href="/deneme/assets/css/stylesheet.5cfc680b1eeaeef9efbced92d46c2a9e876b72ee14fba85846afc4cff9e6e6f8.css" integrity="sha256-XPxoCx7q7vnvvO2S1Gwqnodrcu4U&#43;6hYRq/Ez/nm5vg=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://tbakie.github.io/deneme/favicon.ico">
@@ -56,13 +56,15 @@
 
     </style>
 </noscript><meta property="og:title" content="Series" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://tbakie.github.io/deneme/series/" />
+<meta property="og:url" content="https://tbakie.github.io/deneme/series/" /><meta property="og:image" content="https://tbakie.github.io/deneme/papermod-cover.png"/>
 
-<meta name="twitter:card" content="summary"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://tbakie.github.io/deneme/papermod-cover.png"/>
+
 <meta name="twitter:title" content="Series"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"/>
 
 </head>
 
@@ -81,7 +83,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://tbakie.github.io/deneme/" accesskey="h" title="My New Hugo  (Alt + H)">My New Hugo </a>
+            <a href="https://tbakie.github.io/deneme/" accesskey="h" title="TBE Website  (Alt + H)">TBE Website </a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -107,13 +109,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://tbakie.github.io/deneme/archives" title="Archive">
-                    <span>Archive</span>
+                <a href="https://tbakie.github.io/deneme/about/" title="About">
+                    <span>About</span>
                 </a>
             </li>
             <li>
-                <a href="https://tbakie.github.io/deneme/search/" title="Search">
-                    <span>Search</span>
+                <a href="https://tbakie.github.io/deneme/hobbies/" title="Hobbies">
+                    <span>Hobbies</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://tbakie.github.io/deneme/showcase/" title="Showcase">
+                    <span>Showcase</span>
                 </a>
             </li>
             <li>
@@ -122,8 +129,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://discord.gg/ahpmTvhVmp" title="Discord">
-                    <span>Discord</span>&nbsp;
+                <a href="https://github.com/adityatelange/hugo-PaperMod/wiki/" title="Github">
+                    <span>Github</span>&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
@@ -133,8 +140,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/adityatelange/hugo-PaperMod/wiki/" title="WiKi">
-                    <span>WiKi</span>&nbsp;
+                <a href="https://www.instagram.com/baki__efe" title="Instagram">
+                    <span>Instagram</span>&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
@@ -156,7 +163,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://tbakie.github.io/deneme/">My New Hugo </a></span>
+    <span>&copy; 2023 <a href="https://tbakie.github.io/deneme/">TBE Website </a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
