--- a/404.html
+++ b/404.html
@@ -128,7 +128,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/adityatelange/hugo-PaperMod/wiki/" title="Github">
+                <a href="https://github.com/tbakie" title="Github">
                     <span>Github</span>&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
