--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <h2 id="welcome-to-my-personal-website">Welcome to my personal website.</h2>
 <p><strong>On this platform, I share my personal projects, insights and updates about my areas of interest,</strong>
 <strong>delving into topics I am passionate about every day.</strong>
-<em>You can find my resume at <a href="/TBEwebsite/about/">Resume</a></em>
+<em>You can find my resume at <a href="/TBEwebsite/About/">About</a></em>
 <strong>Whether it&rsquo;s the latest tech trends, innovative projects,</strong>
 <strong>or just musings from my daily life, there&rsquo;s always something new and exciting to explore.</strong>
 <strong>Stay connected and join my journey by following my social media links. Here, you&rsquo;ll also find a showcase of my projects,</strong>
