--- a/leetcode/index.html
+++ b/leetcode/index.html
@@ -163,8 +163,8 @@ Remove Element Given an integer array nums and an integer val, remove all occurr
         </div>
         <ul id="menu">
             <li>
-                <a href="https://tbakie.github.io/TBEwebsite/about/" title="About">
-                    <span>About</span>
+                <a href="https://tbakie.github.io/TBEwebsite/resume/" title="Resume">
+                    <span>Resume</span>
                 </a>
             </li>
             <li>
