--- a/404.html
+++ b/404.html
@@ -113,8 +113,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://tbakie.github.io/TBEwebsite/hobbies/" title="Hobbies">
-                    <span>Hobbies</span>
+                <a href="https://tbakie.github.io/TBEwebsite/about/" title="About">
+                    <span>About</span>
                 </a>
             </li>
             <li>
