--- a/leetcode/index.html
+++ b/leetcode/index.html
@@ -168,8 +168,8 @@ Remove Element Given an integer array nums and an integer val, remove all occurr
                 </a>
             </li>
             <li>
-                <a href="https://tbakie.github.io/TBEwebsite/hobbies/" title="Hobbies">
-                    <span>Hobbies</span>
+                <a href="https://tbakie.github.io/TBEwebsite/about/" title="About">
+                    <span>About</span>
                 </a>
             </li>
             <li>
