--- a/resume/index.html
+++ b/resume/index.html
@@ -322,7 +322,7 @@ connecting with a broad audience and driving ad campaigns or product sales effec
 <ul>
 <li>Explored the connection between food, community, and well-being through immersive farmstays and cultural exchanges. Analyzed the impact of Italian culinary traditions on health, comparing them to U.S. practices for a global health perspective.</li>
 </ul>
-<p><img loading="lazy" src="/resim2.jpg" alt="my image"  />
+<p><img loading="lazy" src="/hugo.png" alt="my image"  />
 </p>
 
 
